# Model-deployment-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  settings.cfg
.github/: pull_request_template.md
fast_api_deployment/: data_model.py  predict.py  requirements.txt
fast_api_deployment_local/: app.py  data_model.py  predict.py  requirements.txt
fast_api_deployment_online/: Dockerfile  app.py  predict.py  pyproject.toml
src/: helper_functions.py  predict.py  preprocessor.py  random_forrest_regressor.py  train.py  train_not_refactored.py  train_xgboost.py
tests/: test_data_load.py  test_model.py
webservice_deployment/: app.py  predict.py
