[tool.poetry]
name = "mle-model-deployment"
version = "0.1.0"
description = "Model deployment project"
authors = ["Tamer Ajaj"]
license = "MIT License"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
pytest = "^7.4.0"
great-expectations = "^0.17.4"
skops = "^0.8.0"
optuna = "^3.2.0"
mlflow = "^2.4.2"
fastapi = "^0.100.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
max-complexity = 10
select = ["C", "E", "F", "W", "B", "B950"]
ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    ".gitignore",
    "*.egg-info",
    ".mypy_cache",
    ".nox",
    "__pycache__",
    ".pytest_cache",
    ".venv",
    ".vscode",
]

[tool.isort]
line_length = 88
profile = "black"
skip_gitignore = true
