[tool.poetry]
name = "mle-model-deployment"
version = "0.1.0"
description = "Model deployment project docker"
authors = ["Tamer Ajaj"]
license = "MIT License"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2"
fastapi = "^0.100.0"
mlflow = "2.4.2"
uvicorn = "^0.22.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
google-cloud-storage = "^2.10.0"
pandas-gbq = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"